--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@next/font": "13.0.7",
     "bootstrap": "^5.2.3",
     "eslint": "8.30.0",
