--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.0.7",
     "bootstrap": "^5.2.3",
     "eslint-config-next": "13.0.7",
@@ -17,7 +18,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.42.1"
+    "react-hook-form": "^7.42.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "7.17.0",
