--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.0.7",
+    "dayjs": "^1.11.7",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
     "react": "18.2.0",
