--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.0.7",
     "luxon": "^3.3.0",
     "next": "13.0.7",
+    "next-auth": "^4.22.3",
     "prisma": "^4.16.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
