--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.0.7",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "^5.5.2",
+    "axios": "^1.6.1",
     "dayjs": "^1.11.7",
     "eslint-config-next": "13.0.7",
     "luxon": "^3.3.0",
